Resolves: tdf#88825 absent datasource causes exception / abort

::dbtools::ensureRowSetConnection throws on failure, and it can fail
of course if the database doesn't exist

its not generally useful to throw through a vcl event handler as that just
leads back to the dispatch loop.

Change-Id: I8e8f4cff06de5684f163ed1b658a8794f54a7df2